add api update diplomas, update user
